fixed text alignment of home section

--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,7 @@ span {
   line-height: 1.8;
   padding: 1rem 0;
   color: #eee;
+  width: 60%;
 }
 
 .form-container form {
@@ -587,6 +588,7 @@ span {
 
   .home .content p {
     font-size: 1.5rem;
+    width: 100%;
   }
 }
 
